# CompleteAgenticAI

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Ed_donner/Week01_foundation/: d1_lab1.ipynb  d3_lab1.ipynb
