[project]
name = "completeagenticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-adk>=1.18.0",
    "google-genai>=1.49.0",
    "groq>=0.33.0",
    "ipykernel>=7.1.0",
    "litellm>=1.79.3",
    "openai>=2.7.1",
]
